# language-salary

./: README.md  main.py  pyproject.toml
services/: BaseSalaryService.py  HHSalaryService.py  SuperjobSalaryService.py
