[tool.poetry]
name = "language-salary"
version = "0.1.0"
description = ""
authors = ["Andrey Kustov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
environs = "^9.5.0"
terminaltables = "^3.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
